--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidProjectBTL"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".View.FragMent.FragMent_Home"
+            android:exported="false" />
+        <activity
+            android:name=".View.Account.SignUpActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.Account.SignInActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.HomeActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
