--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,8 +20,30 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".View.FragMent.FragMent_Home"
+            android:name=".View.Bill.ContentBillActivity"
             android:exported="false" />
+        <activity
+            android:name=".View.Bill.CartActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.FragMent.FragMent_Bill"
+            android:exported="false" />
+        <activity
+            android:name=".View.FragMent.FragMent_ProFile"
+            android:exported="false" />
+        <activity
+            android:name=".View.Bill.ContentProDuctActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.Admin.SignInAdminActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.Admin.HomeAdminActivity"
+            android:exported="true" />
+        <activity
+            android:name=".View.FragMent.FragMent_Home"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".View.Account.SignUpActivity"
             android:screenOrientation="portrait" />
