--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,15 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".View.Admin.Product.EditOrAddActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.Admin.Product.ListProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.Admin.AdminHomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".View.Bill.ContentBillActivity"
             android:exported="false" />
         <activity
